<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:Star="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >









        <com.adhdriver.work.ui.widget.radaview.RadarChartView
            android:id="@+id/radarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:axisNumb="5"
            app:dotVisiable="false"
            app:textSzie="12sp"
            android:padding="5dp"
            />





        <!--底部文案-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_describe"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />
                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/behavior"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/behavior_describe"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/communicate"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conmmunicate_describe"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_agreement"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_agreement_describe"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    />

            </LinearLayout>


        </LinearLayout>










    </LinearLayout>

</LinearLayout>