<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    >


    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/tv_mode_same_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mode_same_city"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/gray4"

            />




        <TextView
            android:id="@+id/tv_mode_across_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mode_across_city"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:background="@color/gray4"
            />

        <TextView
            android:id="@+id/tv_mode_all"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mode_all"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/gray4"
            android:layout_marginTop="3dp"
            />








    </LinearLayout>

</LinearLayout>