<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/select_paypass_operate"
            android:gravity="center"
            android:textColor="@color/text_grays"
            android:background="@color/white"
            />

        <!--修改密码-->
        <RelativeLayout
            android:id="@+id/rl_change_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_marginTop="3dp"

            >




            <TextView
                android:id="@+id/tv_change_pass"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/change_paypass"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <!--忘记密码-->
        <RelativeLayout
            android:id="@+id/rl_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_marginTop="0.5dp"

            >




            <TextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/forget_paypass"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>



        <TextView
            android:id="@+id/tv_paypass_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/tx_cancel"
            android:gravity="center"
            android:textColor="@color/text_grays"
            android:background="@color/white"
            android:layout_marginTop="3dp"
            android:textStyle="bold"
            />


    </LinearLayout>

</LinearLayout>