<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog_deny"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_message_duoble"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/had_not_set_deposit_pass"
            android:textSize="14sp"
            android:textColor="@color/bar_blue"

            />


        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_double_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/do_next_time"
                android:layout_weight="1"
                android:textColor="@color/bar_blue"

                />


            <TextView
                android:id="@+id/tv_double_sure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/go_to_set"
                android:textColor="@color/bar_blue"

                />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>