<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/enter_bidding_price"
                android:textColor="@color/black" />

        </RelativeLayout>


        <!--金额相关-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="@string/currency_unit"
                android:textColor="@color/black"
                android:textSize="30sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText

                    android:id="@+id/et_bidding_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="top"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    />



            </RelativeLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grayline1"

            />









        <!--变更授权账户-->


        <TextView
            android:id="@+id/tv_start_bidding"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_bidding_button_bg"
            android:gravity="center"
            android:text="@string/bidding"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:enabled="false"
            />



        <TextView
            android:id="@+id/tv_cancel_bidding"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_bidding_cancel_button_bg"
            android:gravity="center"
            android:text="@string/cancel_bidding"
            android:textColor="@color/white"
            android:textSize="15sp" />



    </LinearLayout>

</LinearLayout>